--- a/emnlp2023.tex
+++ b/emnlp2023.tex
@@ -5,7 +5,7 @@
 \documentclass[11pt]{article}
 
 % Remove the "review" option to generate the final version.
-\usepackage{EMNLP2023}
+\usepackage[review]{EMNLP2023}
 
 % Standard package includes
 \usepackage{times}
@@ -93,9 +93,9 @@ Prague, Czech Republic\\
 \texttt{drchajan@fel.cvut.cz} \\}
 
 \begin{document}
-%{\makeatletter\acl@finalcopytrue
+{\makeatletter\acl@finalcopytrue
   \maketitle
-%}
+}
 \begin{abstract}
 In this paper, we present our 3rd place system in the AVerImaTeC shared task, which combines our last year's retrieval-augmented generation (RAG) pipeline with a reverse image search (RIS) module.
 Despite its simplicity, our system delivers competitive performance with a single multimodal LLM call per fact-check at just \$0.013 on average using GPT5.1 via OpenAI batch API.
