--- a/src/system_description.tex
+++ b/src/system_description.tex
@@ -16,8 +16,8 @@ Our pipeline, depicted in Figure~\ref{fig:pipeline2026}, is a RAG scheme of two 
 \end{enumerate}
 \item \textbf{Image-based retrieval module} is invoked separately for each image attached to the \averitec{} claim -- that means, if claim contains $n$ images, $n$ separate sets of results will be produced
 \begin{enumerate}[label=\arabic*.]  % Second-level: 1., 2., 3.
-    \item \textbf{Reverse image search (RIS)} is performed using the \texttt{Google Lens}\footnote{\url{https://lens.google.com/}} via Serper API\footnote{\url{https://serper.dev/}} to produce a set of (up to 30) RIS results -- each assigned a webpage URL and a \textit{thumbnail}, which contains an image within this webpage, similar to the given claim image.
-    \item \textbf{Scraping}: each of the RIS results is then scraped, in our case, using the Firecrawl API\footnote{\url{https://firecrawl.dev/}}, which produces a LLM-friendly markdown for each of the URLs. 
+    \item \textbf{Reverse image search (RIS)} is performed using the \texttt{Google Lens}\footnote{\url{https://lens.google.com/}} via Serper API\footnote{\url{https://serper.dev/}} to produce a set of (up to 30) RIS results -- each assigned a webpage URL and a \textit{thumbnail}, which contains an image within this webpage similar to the given claim image -- this should be the image that triggered webpage's inclusion in RIS results.
+    \item \textbf{Scraping}: each of the RIS results is then scraped, in our case, using the Firecrawl API\footnote{\url{https://firecrawl.dev/}}, which produces a LLM-friendly markdown for each of the URLs. We disregard the other images in the webpage, and only keep the thumbnail which triggered the RIS result inclusion, as it has stronger guarantees of being similar to the claim image.
     \item \textbf{Result filtering} -- to maintain the evidence principle~\cite{glockner-etal-2022-missing}, we filter out any evidence published after the claim was originally stated, using the Htmldate~\cite{barbaresi-2020-htmldate} library to estimate the publishment dates for each RIS-retrieved URL.
     
     Importantly, many results of RIS we performed in ii.1 were scraping-protected, most notably the Facebook and Instagram posts, resulting in an empty result. For simplicity and compliance with fair data usage, we toss these results as well, although we acknowledge that this might lead to a loss of useful information.
@@ -27,15 +27,16 @@ Our pipeline, depicted in Figure~\ref{fig:pipeline2026}, is a RAG scheme of two 
 \item \textbf{Evidence, label, and justification generation module}
 \begin{enumerate}[label=\arabic*.]  % Second-level: 1., 2., 3.
     \item \textbf{System prompt} is composed of the results of both the text- (i.) and image-based (ii.) retrievers -- in the prompt, as well as in the pipeline scheme in Figure~\ref{fig:pipeline2026}, we refer to them as to \textbf{text-related sources} and \textbf{image-related sources}, respectively. We instruct the LLM to cite a source with each piece of evidence it produces, assigning the sources numerical \texttt{source ID}s: 1--9 for the text-related sources and 11--19 for the sources related to the 1st claim image, 21--29 for the sources related to the 2nd claim image, etc. 
+    For the image sources, we only include their text and an information that this text was published alongside an image similar to $i$-th claim image (notably omitting the thumbnail itself), in order not to overwhelm the multimodal LLM with easy-to-confuse image inputs.
     
     These sources, as well as the task description, formatting instructions and few-shot examples (iii.2) are then serialized into a single system prompt -- its full text can be found in Appendix~\ref{appendix_sec:system2026_prompt}
     \item \textbf{Few-shot examples} of evidence are retrieved for the given claim using BM25~\cite{bm25} on \averitec{} train set. The evidence examples are then appended to the system prompt (iii.1) to make the LLM adhere better to the evidence format used by \averitec{} annotators.
     \item \textbf{Multimodal user message} is composed of the claim text in its first field, and a base64-encoded claim images in its subsequent fields.
     The user message is then passed to the LLM to generate evidence, label and justification.
     \item Upon \textbf{parsing} the LLM outputs, we augment the LLM-generated evidence which refer an image-related source with a base64-encoded \textit{thumbnail} (ii.1) of the respective image-related source to facilitatate comparison with evidence images chosen by human annotators. 
-    \item \textbf{\averitec{} format matching} -- as in previous years, our system outputs the evidence formatted as QA pairs. In \averitec{}, however, this format is phased out -- while the questions are evaluated separately, the main score (see table~\ref{tab:leaderboard}) is based on comparing two self-contained \say{evidence texts}, typically containing all the information within a single declarative sentence with pointers to relevant images.
+    \item \textbf{\averitec{} format matching} -- as in previous years, our system outputs the evidence formatted as QA pairs. In \averitec{}, however, this format is phased out -- while the questions are evaluated separately, the main score (see table~\ref{tab:leaderboard}) is now based on comparing two self-contained \say{evidence texts}, typically containing all the information within a single declarative sentence with pointers to relevant images.
 
-    To match this design without introducing another LLM request, we concatenate the question and answer to obtain a self-contained evidence text for each QA pair. If an image source was referred, we append \texttt{[IMG\_1]}, referring source thumbnail, to this evidence text.
+    To match this design without introducing another LLM request, we concatenate the question and answer to obtain a self-contained evidence text for each QA pair. If an image source from RIS was referred, we append \texttt{[IMG\_1]}, referring source thumbnail, to this evidence text.
 \end{enumerate}
 \end{enumerate}
 
